add 3rd projection in this code

--- a/index.html
+++ b/index.html
@@ -330,6 +330,14 @@
             <a href="Modern_Calculator.html" target="_blank">View Project</a>
           </p>
         </div>
+        <div class="project">
+          <h3>Project 3: Complete Arithmetic Calculator</h3>
+          <p>
+            <strong>Description:</strong> An Arithmetic Calculation website developed using
+           HTML, CSS, and JavaScript.<br />
+            <strong>Link:</strong>
+            <a href="Arithmetics_Math_Function.html" target="_blank">View Project</a>
+          </p>
       </section>
     </div>
     <footer>
